// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppManagementView should render installing app dialog 1`] = `
<div>
  <Modal
    backdrop={true}
    show={true}
  >
    <ModalHeader
      closeButton={false}
    >
      <ModalTitle>
        Installing
      </ModalTitle>
    </ModalHeader>
    <ModalBody>
      <p>
        Installing pc-nrfconnect-foo. Please wait...
      </p>
    </ModalBody>
    <ModalFooter>
      <img
        alt="Loading..."
        className="core-spinner"
        height={16}
        src="test-file-stub"
        width={16}
      />
       
      <Button
        disabled={true}
      >
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`AppManagementView should render not-installed, installed, and upgradable apps sorted by name 1`] = `
<div>
  <div
    className="core-app-management-item list-group-item"
  >
    <h4
      className="list-group-item-heading"
    >
      App A
    </h4>
    <div
      className="list-group-item-text"
    >
      <p>
        appA description
      </p>
      <div
        className="core-app-management-item-footer"
      >
        <button
          className="btn btn-link core-btn-link"
          onClick={[Function]}
        >
          More information
        </button>
        <div
          className="core-app-management-item-status upgrade-available"
        >
          Upgrade available
        </div>
        <div
          className="core-app-management-item-buttons"
        >
          <button
            className="btn btn-primary core-btn"
            onClick={[Function]}
            title="Upgrade App A from v1.2.3 to v1.2.4"
          >
            <span
              className="glyphicon glyphicon-download-alt"
            />
            <span
              className="core-btn-text"
            >
              Upgrade
            </span>
          </button>
          <button
            className="btn btn-primary core-btn"
            onClick={[Function]}
            title="Remove App A"
          >
            <span
              className="glyphicon glyphicon-trash"
            />
            <span
              className="core-btn-text"
            >
              Remove
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-management-item list-group-item"
  >
    <h4
      className="list-group-item-heading"
    >
      App B
    </h4>
    <div
      className="list-group-item-text"
    >
      <p>
        appB description
      </p>
      <div
        className="core-app-management-item-footer"
      >
        <button
          className="btn btn-link core-btn-link"
          onClick={[Function]}
        >
          More information
        </button>
        <div
          className="core-app-management-item-buttons"
        >
          <button
            className="btn btn-primary core-btn"
            onClick={[Function]}
            title="Install App B"
          >
            <span
              className="glyphicon glyphicon-download-alt"
            />
            <span
              className="core-btn-text"
            >
              Install
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-management-item list-group-item"
  >
    <h4
      className="list-group-item-heading"
    >
      App C
    </h4>
    <div
      className="list-group-item-text"
    >
      <p>
        appC description
      </p>
      <div
        className="core-app-management-item-footer"
      >
        <button
          className="btn btn-link core-btn-link"
          onClick={[Function]}
        >
          More information
        </button>
        <div
          className="core-app-management-item-status installed"
        >
          Installed
        </div>
        <div
          className="core-app-management-item-buttons"
        >
          <div />
          <button
            className="btn btn-primary core-btn"
            onClick={[Function]}
            title="Remove App C"
          >
            <span
              className="glyphicon glyphicon-trash"
            />
            <span
              className="core-btn-text"
            >
              Remove
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppManagementView should render removing app dialog 1`] = `
<div>
  <Modal
    backdrop={true}
    show={true}
  >
    <ModalHeader
      closeButton={false}
    >
      <ModalTitle>
        Removing
      </ModalTitle>
    </ModalHeader>
    <ModalBody>
      <p>
        Removing pc-nrfconnect-foo. Please wait...
      </p>
    </ModalBody>
    <ModalFooter>
      <img
        alt="Loading..."
        className="core-spinner"
        height={16}
        src="test-file-stub"
        width={16}
      />
       
      <Button
        disabled={true}
      >
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`AppManagementView should render spinner when retrieving apps 1`] = `
<div
  className="core-loading-apps-spinner"
/>
`;

exports[`AppManagementView should render upgrading app dialog 1`] = `
<div>
  <Modal
    backdrop={true}
    show={true}
  >
    <ModalHeader
      closeButton={false}
    >
      <ModalTitle>
        Upgrading
      </ModalTitle>
    </ModalHeader>
    <ModalBody>
      <p>
        Upgrading pc-nrfconnect-foo. Please wait...
      </p>
    </ModalBody>
    <ModalFooter>
      <img
        alt="Loading..."
        className="core-spinner"
        height={16}
        src="test-file-stub"
        width={16}
      />
       
      <Button
        disabled={true}
      >
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`AppManagementView should render without any apps 1`] = `<div />`;
